--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -5,19 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ShopConnectionString" connectionString="Data Source=LAPTOP-97SPGETF\PHAMNGOCMANH;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString1" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString2" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString3" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString4" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString5" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="ShopConnectionString6" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
+    <!--<add name="ShopConnectionString" connectionString="workstation id=minkyshop.mssql.somee.com;packet size=4096;user id=lmht123na_SQLLogin_1;pwd=lid2ov3niq;data source=minkyshop.mssql.somee.com;persist security info=False;TrustServerCertificate=True;initial catalog=minkyshop"
+      providerName="System.Data.SqlClient" />-->
+    <add name="ShopConnectionString" connectionString="Data Source=IAMPEWNOY\MAYAO;Initial Catalog=Shop;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
